--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,9 @@ python = "^3.12"
 fastapi = "^0.111.0"
 uvicorn = "^0.29.0"
 SQLAlchemy = "^2.0.30"
-PyMySQL = "^1.1.1"
 pydantic = "^2.7.1"
 cryptography = "^42.0.7"
+mysqlclient = "^2.2.4"
 
 
 [build-system]
